[metadata]
name = juce-utils
version = 0.0.1
author = Luke Maycock
author_email = luke@maycock.email
description = Python classes and functions for managing JUCE projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Luke-Maycock/juce-utils
project_urls =
    Bug Tracker = https://github.com/Luke-Maycock/juce-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src